<resources>
    <string name="app_name">STEM</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="save_menu">SAVE</string>
    <string name="set_routine">Set Routine</string>
    <string name="frequency">Frequency</string>
    <string name="do_now_header">Do Now</string>
    <string name="timeHint">Reminder</string>
    <string name="repeatHint">Repeat</string>
    <string name="no_routines_todo">Nothing to do today.\nYou\'re all set!</string>
    <string name="main_title">Routine Tracker</string>

    <string name="implementation_intention">Intention</string>
    <string name="dismiss">Cancel</string>
    <string name="ok">OK</string>
    <string name="imp_cue_hint">trigger event</string>
    <string name="imp_name_hint">action</string>
    <string name="backup_alarm_hint">Backup Alarm</string>
    <string name="backup_alarm_dialog_title">Alert you again after…</string>
    <string name="gentle_remind">Don\'t forget to</string>
    <string name="backup_notif">Did you remember to</string>
    <string name="deleteHint">Delete</string>

    <string-array name="days">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

    <!--Showcase-->
    <string name="showcase_dismiss">GOT IT</string>
    <string name="showcase_swipe">When you finish a habit, swipe it right</string>
    <string name="showcase_new_habit">Define a new habit</string>
    <string name="showcase_progress">View your habit progression</string>

    <string name="next">NEXT</string>
    <string name="prev">PREVIOUS</string>
    <string name="new_routine">Define New Habit</string>

    <string name="habit_overview">The Habit Loop</string>
    <string name="habit_trigger_info">Cues begin the habit loop.</string>
    <string name="habit_routine_info">Routines are the actual tasks.</string>
    <string name="habit_reward_info">Rewards make the habit stronger.</string>
    <string name="habit_automaticity_info">The time it takes to form a habit differs based on the habit and the person.</string>
    <string name="habit_technique_info">Habit App-It can help you make use of techniques known to accelerate habit growth.</string>
    <string name="routine_name_prompt">What habit would you like to start building?</string>
    <string name="routine_name_hint">habit name</string>
    <string name="routine_name_example">eg. brush my teeth, read, walk the dog</string>
    <string name="psychology_assurance">Habit App-It uses psychology to help you build healthful habits.</string>
    <string name="learn_more">Learn more</string>
    <string name="finish">FINISH</string>

</resources>
