<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">


    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/new_routine_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:contentInsetLeft="72dp"
            app:contentInsetStart="72dp"
            app:theme="@style/ToolBarStyle" />
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/ii_layout_button">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/ic_edit_black_24dp"
                android:layout_gravity="center_vertical" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="15dp"
                android:paddingTop="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginStart="4dp"
                    android:text="@string/implementation_intention"
                    android:textColor="@color/primary_text_default_material_light"
                    android:textSize="16sp"
                    android:theme="@style/AppTheme" />

                <TextView
                    style="@style/AppTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginStart="4dp"
                    android:id="@+id/ii_text_view"
                    android:textColor="@color/secondary_text_default_material_light"
                    android:textSize="14sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/time_to_do">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_access_time_black_36dp"
                android:layout_gravity="center_vertical" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="15dp"
                android:paddingTop="15dp">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginStart="4dp"
                    android:text="@string/timeHint"
                    android:textColor="@color/primary_text_default_material_light"
                    android:textSize="16sp"
                    android:theme="@style/AppTheme" />

                <TextView
                    style="@style/AppTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginStart="4dp"
                    android:id="@+id/time_text_view"
                    android:textColor="@color/secondary_text_default_material_light"
                    android:textSize="14sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/back_up_alarm">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_alarm_black_36dp"
                android:layout_gravity="center_vertical" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="15dp"
                android:paddingTop="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginStart="4dp"
                    android:text="@string/backup_alarm_hint"
                    android:textColor="@color/primary_text_default_material_light"
                    android:textSize="16sp"
                    android:theme="@style/AppTheme" />

                <TextView
                    style="@style/AppTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginStart="4dp"
                    android:id="@+id/backup_alarm_text_view"
                    android:textColor="@color/secondary_text_default_material_light"
                    android:textSize="14sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/repeat_button">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_today_black_36dp"
                android:layout_gravity="center_vertical" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="15dp"
                android:paddingTop="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginStart="4dp"
                    android:text="@string/repeatHint"
                    android:textColor="@color/primary_text_default_material_light"
                    android:textSize="16sp"
                    android:theme="@style/AppTheme" />

                <TextView
                    android:id="@+id/repeat_textview"
                    style="@style/AppTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginStart="4dp"
                    android:textColor="@color/secondary_text_default_material_light"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>